testsuite/tests/rename/should_fail/T17594b.stderr
T17594b.hs:5:5: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:8:5: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:12:5: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:15:5: error: [GHC-78249]
    Illegal invisible type pattern: @t1
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:15:9: error: [GHC-78249]
    Illegal invisible type pattern: @t2
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:15:13: error: [GHC-78249]
    Illegal invisible type pattern: @t3
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:15:26: error: [GHC-78249]
    Illegal invisible type pattern: @t4
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:15:30: error: [GHC-78249]
    Illegal invisible type pattern: @t5
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:15:34: error: [GHC-78249]
    Illegal invisible type pattern: @t6
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:18:10: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:20:19: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:23:9: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:26:5: error: [GHC-78249]
    Illegal invisible type pattern: @t1
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:26:9: error: [GHC-78249]
    Illegal invisible type pattern: @t2
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:26:31: error: [GHC-78249]
    Illegal invisible type pattern: @t3
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:26:57: error: [GHC-78249]
    Illegal invisible type pattern: @t4
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:26:61: error: [GHC-78249]
    Illegal invisible type pattern: @t5
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:26:70: error: [GHC-78249]
    Illegal invisible type pattern: @t6
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:29:10: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

T17594b.hs:32:10: error: [GHC-78249]
    Illegal invisible type pattern: @t
    Suggested fix:
      Perhaps you intended to use the ‘TypeAbstractions’ extension

